Infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-agency-ingress
  namespace: travel-agency
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/limit-rps: "20"
spec:
  ingressClassName: nginx
  rules:
    - host: travel-agency.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: travel-agency-api
                port:
                  number: 80
